made changes in designs, and solved bug of chat

--- a/src/pages/User/Detail/detail.scss
+++ b/src/pages/User/Detail/detail.scss
@@ -3,7 +3,7 @@
 
 .banner {
     height: 50%;
-    width: 100%;
+    // width: 100%;
     // position: absolute;
     background-position: center;
     background-size: cover;
@@ -196,7 +196,7 @@
     flex-direction: column;
     max-width: 1240px;
     margin: 0px auto;
-    width: 92%;
+    width: 88%;
 }
 .details{
     // background-color: rgb(255, 255, 255);
