--- a/src/components/User/Banner/banner.css
+++ b/src/components/User/Banner/banner.css
@@ -150,6 +150,7 @@
     width: 100%;
     text-align: center;
     color: white;
+    height: 100%;
     /* max-height: 50rem; */
     /* min-height: 50rem; */
   }
