changed banner style and some changes where made in movies

--- a/src/components/User/Slider2/slider.css
+++ b/src/components/User/Slider2/slider.css
@@ -46,6 +46,7 @@ body {
 
   
   .cardContent .title{
+    justify-content: left;
     color: white;
     font-size: 18px;
     margin-bottom: 1rem;
@@ -131,7 +132,7 @@ body {
     font-family: Roboto, sans-serif;
     transition: .3s;
     cursor: pointer;
-    height: 350px;
+    height: 320px;
    
   }
 
